--- a/web/pending-approvals.html
+++ b/web/pending-approvals.html
@@ -24,20 +24,16 @@
                 <div class="nav-section">
                     <div class="nav-section-title">Main Menu</div>
                     <a href="/dashboard.html" class="nav-item">
-                        <span class="nav-item-icon">&#128200;</span>
                         Dashboard
                     </a>
-                    <a href="/" class="nav-item">
-                        <span class="nav-item-icon">&#128221;</span>
+                    <a href="/" class="nav-item" id="newJobOrderNav">
                         New Job Order
                     </a>
-                    <a href="/reports.html" class="nav-item">
-                        <span class="nav-item-icon">&#128202;</span>
+                    <a href="/reports.html" class="nav-item" id="reportsNav">
                         Reports
                     </a>
                     <a href="/pending-approvals.html" class="nav-item active">
-                        <span class="nav-item-icon">&#128338;</span>
-                        Pending Approvals
+                        <span id="navApprovalLabel">Pending Approvals</span>
                         <span class="nav-item-badge" id="pendingCountBadge" style="display: none;">0</span>
                     </a>
                 </div>
@@ -45,7 +41,6 @@
                 <div class="nav-section" id="adminSection" style="display: none;">
                     <div class="nav-section-title">Administration</div>
                     <a href="/admin.html" class="nav-item">
-                        <span class="nav-item-icon">&#9999;</span>
                         Signatures
                     </a>
                 </div>
@@ -60,7 +55,7 @@
                     </div>
                 </div>
                 <button class="btn btn-ghost btn-full mt-2" id="logoutBtn" style="justify-content: flex-start; gap: 12px;">
-                    <span>&#128682;</span> Logout
+                    Logout
                 </button>
             </div>
         </aside>
@@ -70,9 +65,7 @@
             <!-- Top Bar -->
             <header class="top-bar">
                 <div class="top-bar-left">
-                    <button class="icon-btn mobile-menu-toggle" id="menuToggle" style="display: none;">
-                        &#9776;
-                    </button>
+                    <button class="icon-btn mobile-menu-toggle" id="menuToggle" style="display: none;">Menu</button>
                     <div>
                         <h1 class="page-title">Pending Approvals</h1>
                         <div class="breadcrumb">
@@ -84,31 +77,40 @@
                 </div>
                 <div class="top-bar-right">
                     <button class="btn btn-secondary btn-sm" onclick="loadApprovals()">
-                        <span>&#8635;</span> Refresh
+                        Refresh
                     </button>
                 </div>
             </header>
 
             <!-- Page Content -->
             <div class="page-content">
+                <div class="alert alert-info mb-4" id="staffApprovalNotice" style="display: none;">
+                    <div class="alert-icon"></div>
+                    <div class="alert-content">
+                        <div class="alert-title">Your Signature Requests</div>
+                        <div class="alert-message">
+                            Review the requests below and use Approve or Reject. Once you approve, the leader can generate the report.
+                        </div>
+                    </div>
+                </div>
                 <!-- Stats Grid -->
                 <div class="stats-grid mb-6" style="grid-template-columns: repeat(3, 1fr);">
                     <div class="stat-card" style="--stat-color: var(--warning);">
-                        <div class="stat-card-icon warning">&#128338;</div>
+                        <div class="stat-card-icon warning"></div>
                         <div class="stat-card-content">
                             <div class="stat-card-title">Awaiting Response</div>
                             <div class="stat-card-value" id="statPending">0</div>
                         </div>
                     </div>
                     <div class="stat-card" style="--stat-color: var(--success);">
-                        <div class="stat-card-icon success">&#9989;</div>
+                        <div class="stat-card-icon success"></div>
                         <div class="stat-card-content">
                             <div class="stat-card-title">Approved</div>
                             <div class="stat-card-value" id="statApproved">0</div>
                         </div>
                     </div>
                     <div class="stat-card" style="--stat-color: var(--error);">
-                        <div class="stat-card-icon error">&#10060;</div>
+                        <div class="stat-card-icon error"></div>
                         <div class="stat-card-content">
                             <div class="stat-card-title">Rejected</div>
                             <div class="stat-card-value" id="statRejected">0</div>
@@ -123,13 +125,13 @@
                             All Requests
                         </button>
                         <button class="tab" data-filter="pending">
-                            <span>&#128338;</span> Pending
+                            Pending
                         </button>
                         <button class="tab" data-filter="approved">
-                            <span>&#9989;</span> Approved
+                            Approved
                         </button>
                         <button class="tab" data-filter="rejected">
-                            <span>&#10060;</span> Rejected
+                            Rejected
                         </button>
                     </div>
 
@@ -222,6 +224,32 @@
             if (currentUser.isAdmin) {
                 document.getElementById('adminSection').style.display = 'block';
             }
+
+            const isStaffOnly = !currentUser.isAdmin && !currentUser.isLeader;
+            const newJobNav = document.getElementById('newJobOrderNav');
+            if (newJobNav && isStaffOnly) {
+                newJobNav.style.display = 'none';
+            }
+
+            const reportsNav = document.getElementById('reportsNav');
+            if (reportsNav && isStaffOnly) {
+                reportsNav.style.display = 'none';
+            }
+
+            const navLabel = document.getElementById('navApprovalLabel');
+            if (navLabel && isStaffOnly) {
+                navLabel.textContent = 'My Signature Requests';
+            }
+
+            const staffNotice = document.getElementById('staffApprovalNotice');
+            if (staffNotice) {
+                staffNotice.style.display = isStaffOnly ? 'flex' : 'none';
+            }
+
+            if (isStaffOnly) {
+                document.querySelector('.page-title').textContent = 'My Signature Requests';
+                document.querySelector('.breadcrumb').innerHTML = '<span>Home</span><span class="breadcrumb-separator">/</span><span>My Signature Requests</span>';
+            }
         }
 
         // =============================================================================
@@ -248,7 +276,7 @@
             } catch (err) {
                 listDiv.innerHTML = `
                     <div class="empty-state">
-                        <div class="empty-state-icon">&#10060;</div>
+                        <div class="empty-state-icon"></div>
                         <div class="empty-state-title">Failed to Load</div>
                         <div class="empty-state-description">Unable to load approval requests. Please try again.</div>
                     </div>
@@ -285,7 +313,7 @@
             if (filtered.length === 0) {
                 listDiv.innerHTML = `
                     <div class="empty-state">
-                        <div class="empty-state-icon">&#128203;</div>
+                        <div class="empty-state-icon"></div>
                         <div class="empty-state-title">No Approval Requests</div>
                         <div class="empty-state-description">
                             ${currentFilter === 'all'
@@ -321,7 +349,10 @@
 
             const reportData = approval.reportData || {};
             const isCreator = approval.createdBy?.toLowerCase() === currentUser?.email?.toLowerCase();
-            const canGenerate = approval.status === 'approved' && (currentUser?.isAdmin || isCreator);
+            const isStaffApprover = approval.staffEmail?.toLowerCase() === currentUser?.email?.toLowerCase();
+            const canRespond = approval.status === 'pending' && isStaffApprover;
+            const canReview = isStaffApprover;
+            const canGenerate = approval.status === 'approved' && (currentUser?.isAdmin || currentUser?.isLeader || isCreator);
             const canDelete = currentUser?.isAdmin || isCreator;
 
             return `
@@ -364,14 +395,27 @@
                         </div>
 
                         <div class="flex gap-2 justify-end">
+                            ${canReview ? `
+                                <a class="btn btn-secondary" href="/approval-review.html?token=${approval.token}">
+                                    Review Request
+                                </a>
+                            ` : ''}
+                            ${canRespond ? `
+                                <button class="btn btn-success" onclick="respondToApproval('${approval.token}', 'approve')">
+                                    Approve
+                                </button>
+                                <button class="btn btn-error" onclick="respondToApproval('${approval.token}', 'reject')">
+                                    Reject
+                                </button>
+                            ` : ''}
                             ${canGenerate ? `
                                 <button class="btn btn-success" onclick="generateFromApproval('${approval.token}')">
-                                    <span>&#128196;</span> Generate Report
+                                    Generate Report
                                 </button>
                             ` : ''}
                             ${canDelete ? `
                                 <button class="btn btn-ghost" onclick="deleteApproval('${approval.token}')">
-                                    <span>&#128465;</span> Delete
+                                    Delete
                                 </button>
                             ` : ''}
                         </div>
@@ -388,16 +432,53 @@
             }
 
             try {
-                // Redirect to main form with the approval data pre-filled
-                const reportData = approval.reportData || {};
-                reportData.staff_signature = approval.staffUserId;
-                reportData._approvalToken = token;
+                const res = await fetch(`/api/approvals/${token}/generate`, {
+                    method: 'POST',
+                    credentials: 'include'
+                });
 
-                // Store in sessionStorage and redirect
-                sessionStorage.setItem('pendingApprovalData', JSON.stringify(reportData));
-                window.location.href = '/?fromApproval=true';
+                const data = await res.json();
+
+                if (!res.ok) {
+                    throw new Error(data.error || 'Report generation failed');
+                }
+
+                showToast(`Job order ${data.job_no} generated successfully`, 'success');
+                window.location.href = '/reports.html';
             } catch (err) {
-                showToast('Failed to prepare report generation', 'error');
+                showToast(err.message || 'Failed to generate report', 'error');
+            }
+        }
+
+        async function respondToApproval(token, action) {
+            const actionLabel = action === 'approve' ? 'approve' : 'reject';
+            if (!confirm(`Are you sure you want to ${actionLabel} this signature request?`)) return;
+
+            try {
+                const res = await fetch(`/api/approvals/respond/${token}`, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    credentials: 'include',
+                    body: JSON.stringify({ action })
+                });
+
+                const data = await res.json();
+
+                if (!res.ok) {
+                    throw new Error(data.error || 'Response failed');
+                }
+
+                const approval = allApprovals.find(a => a.token === token);
+                if (approval) {
+                    approval.status = data.status;
+                    approval.respondedAt = new Date().toISOString();
+                }
+
+                updateStats();
+                renderApprovals();
+                showToast(data.message || 'Response recorded', 'success');
+            } catch (error) {
+                showToast(error.message || 'Failed to respond', 'error');
             }
         }
 
@@ -437,7 +518,7 @@
             const toast = document.createElement('div');
             toast.className = `toast ${type}`;
             toast.innerHTML = `
-                <span>${type === 'success' ? '&#9989;' : type === 'error' ? '&#10060;' : '&#9888;'}</span>
+                <span>${type === 'success' ? '' : type === 'error' ? '' : ''}</span>
                 <span>${message}</span>
             `;
             container.appendChild(toast);
