--- a/web/admin.html
+++ b/web/admin.html
@@ -55,6 +55,9 @@
                         <div class="sidebar-user-role" id="sidebarUserRole">Administrator</div>
                     </div>
                 </div>
+                <button class="btn btn-ghost btn-full mt-2" id="settingsBtn" style="justify-content: flex-start; gap: 12px;">
+                    Settings
+                </button>
                 <button class="btn btn-ghost btn-full mt-2" id="logoutBtn" style="justify-content: flex-start; gap: 12px;">
                     Logout
                 </button>
@@ -179,6 +182,36 @@
         </main>
     </div>
 
+    <!-- Settings Modal -->
+    <div class="modal-overlay" id="settingsModal">
+        <div class="modal">
+            <div class="modal-header">
+                <h3 class="modal-title">Settings</h3>
+                <button class="modal-close" id="closeSettingsModal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <form id="settingsForm">
+                    <div class="form-group">
+                        <label class="form-label">Save Reports To</label>
+                        <div class="flex gap-2">
+                            <input type="text" class="form-input" id="savePathInput" placeholder="e.g., \\\\server\\share\\Reports or C:\\Reports">
+                            <button type="button" class="btn btn-secondary" id="browseSavePathBtn">Browse</button>
+                        </div>
+                        <input type="file" id="savePathPicker" webkitdirectory directory style="display: none;">
+                        <small class="text-secondary" style="display: block; margin-top: 8px;">
+                            Enter a network path or local folder where generated reports will be saved.
+                            Leave empty to use the default server location.
+                        </small>
+                    </div>
+                    <div class="flex gap-4 mt-4">
+                        <button type="button" class="btn btn-secondary btn-full" id="cancelSettingsBtn">Cancel</button>
+                        <button type="submit" class="btn btn-primary btn-full">Save Settings</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
     <!-- Toast Container -->
     <div class="toast-container" id="toastContainer"></div>
 
@@ -192,6 +225,9 @@
         // DOM ELEMENTS
         // =============================================================================
         const logoutBtn = document.getElementById('logoutBtn');
+        const settingsModal = document.getElementById('settingsModal');
+        const settingsForm = document.getElementById('settingsForm');
+        const settingsBtn = document.getElementById('settingsBtn');
 
         // =============================================================================
         // INITIALIZATION
@@ -202,6 +238,21 @@
 
             // Event listeners
             logoutBtn.addEventListener('click', handleLogout);
+            if (settingsBtn) {
+                settingsBtn.addEventListener('click', openSettingsModal);
+            }
+            const closeSettingsModal = document.getElementById('closeSettingsModal');
+            const cancelSettingsBtn = document.getElementById('cancelSettingsBtn');
+            if (closeSettingsModal) {
+                closeSettingsModal.addEventListener('click', () => settingsModal.classList.remove('active'));
+            }
+            if (cancelSettingsBtn) {
+                cancelSettingsBtn.addEventListener('click', () => settingsModal.classList.remove('active'));
+            }
+            if (settingsForm) {
+                settingsForm.addEventListener('submit', handleSaveSettings);
+            }
+            setupSavePathPicker();
             document.getElementById('searchInput').addEventListener('keypress', (e) => {
                 if (e.key === 'Enter') searchDirectory();
             });
@@ -263,6 +314,108 @@
         function updateUserUI() {
             document.getElementById('sidebarAvatar').textContent = (currentUser.name || currentUser.username).charAt(0).toUpperCase();
             document.getElementById('sidebarUserName').textContent = currentUser.name || currentUser.username;
+        }
+
+        // =============================================================================
+        // USER SETTINGS
+        // =============================================================================
+        async function openSettingsModal() {
+            if (!settingsModal) return;
+
+            try {
+                const response = await fetch('/api/user/settings', { credentials: 'include' });
+                const data = await response.json();
+
+                if (data.success) {
+                    const savePathInput = document.getElementById('savePathInput');
+                    if (savePathInput) {
+                        savePathInput.value = data.settings.savePath || '';
+                    }
+                }
+            } catch (error) {
+                console.error('Failed to load settings:', error);
+            }
+
+            settingsModal.classList.add('active');
+        }
+
+        async function handleSaveSettings(e) {
+            e.preventDefault();
+
+            const savePathInput = document.getElementById('savePathInput');
+            const savePath = savePathInput ? savePathInput.value.trim() : '';
+
+            try {
+                const response = await fetch('/api/user/settings', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    credentials: 'include',
+                    body: JSON.stringify({ savePath })
+                });
+
+                const data = await response.json();
+
+                if (data.success) {
+                    showToast('Settings saved successfully!', 'success');
+                    settingsModal.classList.remove('active');
+                } else {
+                    showToast(data.error || 'Failed to save settings', 'error');
+                }
+            } catch (error) {
+                console.error('Failed to save settings:', error);
+                showToast('Failed to save settings', 'error');
+            }
+        }
+
+        function setupSavePathPicker() {
+            const browseBtn = document.getElementById('browseSavePathBtn');
+            const savePathInput = document.getElementById('savePathInput');
+            const savePathPicker = document.getElementById('savePathPicker');
+
+            if (!browseBtn || !savePathInput) return;
+
+            browseBtn.addEventListener('click', async () => {
+                if (window.showDirectoryPicker) {
+                    try {
+                        const handle = await window.showDirectoryPicker();
+                        if (handle?.name) {
+                            savePathInput.value = handle.name;
+                        }
+                        return;
+                    } catch (error) {
+                        if (error?.name !== 'AbortError') {
+                            console.error('Failed to open directory picker:', error);
+                        }
+                    }
+                }
+
+                if (savePathPicker) {
+                    savePathPicker.click();
+                }
+            });
+
+            if (savePathPicker) {
+                savePathPicker.addEventListener('change', () => {
+                    const file = savePathPicker.files?.[0];
+                    if (!file) return;
+                    const path = getSelectedDirectoryPath(file);
+                    if (path) {
+                        savePathInput.value = path;
+                    }
+                    savePathPicker.value = '';
+                });
+            }
+        }
+
+        function getSelectedDirectoryPath(file) {
+            if (file.path) {
+                const lastSeparator = Math.max(file.path.lastIndexOf('/'), file.path.lastIndexOf('\\'));
+                return lastSeparator >= 0 ? file.path.slice(0, lastSeparator) : file.path;
+            }
+            if (file.webkitRelativePath) {
+                return file.webkitRelativePath.split('/')[0];
+            }
+            return '';
         }
 
         // =============================================================================
