Add icons and zip report downloads

--- a/web/admin.html
+++ b/web/admin.html
@@ -41,7 +41,13 @@
                 <div class="nav-section">
                     <div class="nav-section-title">Administration</div>
                     <a href="/admin.html" class="nav-item active">
-                        Signatures
+                        <span class="nav-item-icon">
+                            <svg viewBox="0 0 24 24" aria-hidden="true">
+                                <path d="M12 3l7 4v5c0 5-3.5 9-7 9s-7-4-7-9V7l7-4z"></path>
+                                <path d="M9 12l2 2 4-4"></path>
+                            </svg>
+                        </span>
+                        <span>Signatures</span>
                         <span class="nav-item-badge" id="pendingBadgeSidebar" style="display: none;">0</span>
                     </a>
                 </div>
@@ -56,10 +62,23 @@
                     </div>
                 </div>
                 <button class="btn btn-ghost btn-full mt-2" id="settingsBtn" style="justify-content: flex-start; gap: 12px;">
-                    Settings
+                    <span class="sidebar-action-icon">
+                        <svg viewBox="0 0 24 24" aria-hidden="true">
+                            <path d="M12 15.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"></path>
+                            <path d="M19.4 15a1 1 0 0 0 .2 1.1l1.1 1.1-2 3.4-1.5-.6a1 1 0 0 0-1 .1l-1.4.8-1.6-2.6a1 1 0 0 0-.9-.5h-2.6a1 1 0 0 0-.9.5l-1.6 2.6-1.4-.8a1 1 0 0 0-1-.1l-1.5.6-2-3.4 1.1-1.1a1 1 0 0 0 .2-1.1l-.6-1.5a1 1 0 0 0-.8-.6H3.5V8.1h1.6a1 1 0 0 0 .8-.6l.6-1.5a1 1 0 0 0-.2-1.1L5.2 3.8l2-3.4 1.5.6a1 1 0 0 0 1-.1l1.4-.8L12 2.7l1.6-2.6 1.4.8a1 1 0 0 0 1 .1l1.5-.6 2 3.4-1.1 1.1a1 1 0 0 0-.2 1.1l.6 1.5a1 1 0 0 0 .8.6h1.6v4.8h-1.6a1 1 0 0 0-.8.6z"></path>
+                        </svg>
+                    </span>
+                    <span>Settings</span>
                 </button>
                 <button class="btn btn-ghost btn-full mt-2" id="logoutBtn" style="justify-content: flex-start; gap: 12px;">
-                    Logout
+                    <span class="sidebar-action-icon">
+                        <svg viewBox="0 0 24 24" aria-hidden="true">
+                            <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
+                            <path d="M16 17l5-5-5-5"></path>
+                            <path d="M21 12H9"></path>
+                        </svg>
+                    </span>
+                    <span>Logout</span>
                 </button>
             </div>
         </aside>
