--- a/web/pending-approvals.html
+++ b/web/pending-approvals.html
@@ -53,6 +53,15 @@
                         </span>
                         <span>Reports</span>
                     </a>
+                    <a href="/staff-reports.html" class="nav-item">
+                        <span class="nav-item-icon">
+                            <svg viewBox="0 0 24 24" aria-hidden="true">
+                                <path d="M16 11a4 4 0 1 0-8 0"></path>
+                                <path d="M4 21a8 8 0 0 1 16 0"></path>
+                            </svg>
+                        </span>
+                        <span>Staff Reports</span>
+                    </a>
                     <a href="/pending-approvals.html" class="nav-item active">
                         <span class="nav-item-icon">
                             <svg viewBox="0 0 24 24" aria-hidden="true">
